--- a/Katalog.csproj
+++ b/Katalog.csproj
@@ -55,6 +55,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Villa.cs" />
     <Page Include="DetaySayfasi.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -71,9 +72,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Daire.cs" />
     <Compile Include="DetaySayfasi.xaml.cs">
       <DependentUpon>DetaySayfasi.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Konut.cs" />
     <Compile Include="ListeSayfasi.xaml.cs">
       <DependentUpon>ListeSayfasi.xaml</DependentUpon>
     </Compile>
@@ -107,6 +110,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Konutlar.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
